<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="Event" Id="{30e231ac-406f-4da8-8c19-e1596b69049c}">
    <Declaration><![CDATA[TYPE Event :
STRUCT
	Code: INT;
	TimeStamp: DT;
	Kind: EventTypes;
	{attribute 'TcEncoding':='UTF-8'}
	Message: STRING(200);
	{attribute 'TcEncoding':='UTF-8'}
	JSON: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>